Add base structure for future features

--- a/calculate-features.ipynb
+++ b/calculate-features.ipynb
@@ -154,15 +154,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../Data/SE0000101032_SEK/8_SE0000101032_SEK_1.mat (1/765)\t\r"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\nfor i in xrange(len(dirs)):\\n    d = dirs[i]\\n    files = f_names[i]\\n    n = len(files)\\n    \\n    for j, f in enumerate(files):\\n        # update progress\\n        sys.stdout.write(\"%s (%i/%i)\\t\\r\" % (d + \\'/\\' + f, j+1, n))\\n        sys.stdout.flush()\\n            \\n        # checks for bad files\\n        if not f.endswith(\\'.mat\\'):\\n            continue\\n        if f in corrupted:\\n            continue\\n            \\n        # extract data\\n        df = extract_order_book(d+\\'/\\'+f)\\n        \\n        filename = f[2:18] + \\'.csv\\'\\n        \\n        file_exists = os.path.isfile(filename)\\n        \\n        with open(filename, \\'a\\') as w:\\n            \\n            # if file does not exist, write headers into file\\n            if file_exists:\\n                df.to_csv(w, header=False)\\n            else:\\n                df.to_csv(w, header=True)  \\n'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -212,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -424,59 +427,25 @@
    "source": [
     "## $v_5$: Accumulated differences\n",
     "\n",
-    "$v_4 = \\{ \\frac{1}{n}(\\sum_{i=1}^{n} P^{ask}_i - P^{bid}_i), \n",
-    "          \\frac{1}{n}(\\sum_{i=1}^{n} Q^{ask}_i - Q^{bid}_i) \\}$"
+    "$v_4 = \\{ \\frac{1}{n} \\sum_{i=1}^{n} (P^{ask}_i - P^{bid}_i), \n",
+    "          \\frac{1}{n} \\sum_{i=1}^{n} (Q^{ask}_i - Q^{bid}_i) \\}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---------------+----------+----------+-------+-----+\n",
-      "|acc_diff_pbid_q|acc_diff_p|acc_diff_q|    foo|  bar|\n",
-      "+---------------+----------+----------+-------+-----+\n",
-      "|        92300.0|   92300.0|     184.9|92300.0|184.9|\n",
-      "|        92300.0|   92300.0|     204.9|92300.0|204.9|\n",
-      "+---------------+----------+----------+-------+-----+\n",
-      "only showing top 2 rows\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "foo = df\n",
-    "\n",
-    "marksColumns = [col('ask_p' + str(i)) for i in xrange(1, 11)] + [col('bid_p' + str(i)) for i in xrange(1, 11)]\n",
-    "bar = (sum(x for x in marksColumns[:10]) - sum(x for x in marksColumns[10:])) / (len(marksColumns) / 2)\n",
-    "foo = foo.withColumn('foo', bar)\n",
-    "\n",
-    "marksColumns = [col('ask_q' + str(i)) for i in xrange(1, 11)] + [col('bid_q' + str(i)) for i in xrange(1, 11)]\n",
-    "bar = (sum(x for x in marksColumns[:10]) + sum(x for x in marksColumns[10:])) / (len(marksColumns) / 2)\n",
-    "foo = foo.withColumn('bar', bar)\n",
-    "\n",
-    "foo.select(foo.columns[83:]).show(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 232,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---------------+----------+----------+\n",
-      "|acc_diff_pbid_q|acc_diff_p|acc_diff_q|\n",
-      "+---------------+----------+----------+\n",
-      "|        92300.0|   92300.0|     184.9|\n",
-      "|        92300.0|   92300.0|     204.9|\n",
-      "+---------------+----------+----------+\n",
+      "+----------+----------+\n",
+      "|acc_diff_p|acc_diff_q|\n",
+      "+----------+----------+\n",
+      "|   92300.0|     184.9|\n",
+      "|   92300.0|     204.9|\n",
+      "+----------+----------+\n",
       "only showing top 2 rows\n",
       "\n"
      ]
@@ -491,9 +460,107 @@
     "meanOfDiffs = (sum(x for x in marksColumns[:10]) - sum(x for x in marksColumns[10:])) / (len(marksColumns) / 2)\n",
     "df = df.withColumn('acc_diff_q', meanOfDiffs)\n",
     "\n",
-    "\n",
     "df.select(df.columns[83:]).show(2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $v_6$: Price and volume derivates\n",
+    "\n",
+    "$v_6 = \\{ \\frac{dP^{ask}_i}{dt}, \n",
+    "          \\frac{dP^{bid}_i}{dt}, \n",
+    "          \\frac{dQ^{ask}_i}{dt}, \n",
+    "          \\frac{dQ^{bid}_i}{dt} \n",
+    "        \\}^n_{i=1}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $v_7$: Average intensity per type\n",
+    "\n",
+    "$v_7 = \\{ \\lambda^{la}_{\\Delta t},\n",
+    "          \\lambda^{lb}_{\\Delta t},\n",
+    "          \\lambda^{ma}_{\\Delta t},\n",
+    "          \\lambda^{mb}_{\\Delta t},\n",
+    "          \\lambda^{ca}_{\\Delta t},\n",
+    "          \\lambda^{cb}_{\\Delta t}\n",
+    "       \\}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $v_8$: Relative intensity indicators\n",
+    "\n",
+    "$v_8 = \\{ 1_{\\lambda^{la}_{\\Delta t} > \\lambda^{la}_{\\Delta T}},\n",
+    "          1_{\\lambda^{lb}_{\\Delta t} > \\lambda^{lb}_{\\Delta T}},\n",
+    "          1_{\\lambda^{ma}_{\\Delta t} > \\lambda^{ma}_{\\Delta T}},\n",
+    "          1_{\\lambda^{mb}_{\\Delta t} > \\lambda^{mb}_{\\Delta T}}\n",
+    "       \\}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $v_9$: Accerelations\n",
+    "\n",
+    "$v_9 = \\{ \\frac{d\\lambda^{ma}}{dt}, \n",
+    "          \\frac{d\\lambda^{lb}}{dt}, \n",
+    "          \\frac{d\\lambda^{mb}}{dt}, \n",
+    "          \\frac{d\\lambda^{la}}{dt} \n",
+    "        \\}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## $v_{10}$: Time, rounded to hours\n",
+    "\n",
+    "$v_{10} = \\{ \\lfloor \\frac{t}{60} \\rfloor \\}$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
